# ntpu-lms-downloader

./: .gitignore  README.md  lms_downloader.py  pyproject.toml  requirements.txt  secret.py
